crates/lang/macro/tests/ui/contract/fail/N-01-namespace-invalid-identifier.stderr
error: encountered invalid Rust identifier for namespace argument
 --> $DIR/N-01-namespace-invalid-identifier.rs:8:23
  |
8 |     #[ink(namespace = "::invalid_identifier")]
  |                       ^^^^^^^^^^^^^^^^^^^^^^
